# group_cpp_318

Lab_1/: Testes.md  Testes.txt  main.cpp
Lab_2/: Lab_2.pro  Testes.md  main.cpp  task.cpp  task.h
Lab_3/: Lab_3.pro  Tests.md  functions.cpp  main.cpp  task_1.cpp  task_1.h  task_2.cpp  task_2.h  task_3.cpp  task_3.h  task_4.cpp  task_4.h  task_5.cpp  task_5.h  task_6.cpp  task_6.h  task_7.cpp  task_7.h  type_checking.h
Lab_4/: Lab_4.pro  fill_the_array.h  functions.h  main.cpp  matrix_func.h  task_1.cpp  task_1.h  task_2.cpp  task_2.h  task_3.cpp  task_3.h  task_4.cpp  task_4.h  task_5.cpp  task_5.h  task_6.cpp  task_6.h  task_7.cpp  task_7.h  task_8.cpp  task_8.h  task_9.cpp  task_9.h  task_sel.cpp  template_functions.h  testes.md  type_thecking.cpp  type_thecking.h
Lab_4/Lab_4/: Lab_4.pro  main.cpp  task_1.cpp  task_2.cpp  task_4.cpp  task_5.cpp
Lab_5/: CMakeLists.txt  Lab_5.pro  Task_5.cpp  array_of_str.cpp  array_of_str.h  constans.h  continent.cpp  continent.h  descrip_func.cpp  descrip_func.h  mail_address.cpp  mail_address.h  main.cpp  new_view.cpp  new_view.h  stop.cpp  stop.h  string_packing.cpp  string_packing.h  task_1.cpp  task_1.h  task_2.cpp  task_2.h  task_5.cpp  task_5.h  template_functions.h  testes.md  type_thecking.cpp  type_thecking.h
Lab_6/: CMakeLists.txt  C_Bruteforce.cpp  C_labWork.cpp  C_labWork.h  Claboratory.cpp  Claboratory.h  check_the_input.cpp  check_the_input.h  constans.h  denamic_objects.cpp  denamic_objects.h  errmess.cpp  errmess.h  lab_6.cpp  lab_work.h  laboratory.cpp  laboratory.h  main.cpp  stop.cpp  stop.h  task_selection.cpp  task_selection.h  testes.md
